Blender crashes when using multiple domains and multiple flow objects with subframes #44945

Closed
opened 2015-06-04 00:49:34 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux

Blender Version
Broken: 2.74, 2.75 testbuild 1

Short description of error
Blender crashes when attempting to simulate two independent domains and flow objects with subframes.

Exact steps for others to reproduce the error

  1. Open multi_smoke_crash.blend
  2. Press Alt A
**System Information** Archlinux **Blender Version** Broken: 2.74, 2.75 testbuild 1 **Short description of error** Blender crashes when attempting to simulate two independent domains and flow objects with subframes. **Exact steps for others to reproduce the error** 1. Open [multi_smoke_crash.blend](https://archive.blender.org/developer/F184441/multi_smoke_crash.blend) 2. Press Alt A
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscribers: @Sergey, @Blendify

Added subscribers: @Sergey, @Blendify
Member

crash when running blsder with Blender -d no crash with regular running of blender although the animation was messed up a couple of time @Sergey any ideas? one time only one monkey moved and anoth both

crash when running blsder with `Blender -d` no crash with regular running of blender although the animation was messed up a couple of time @Sergey any ideas? one time only one monkey moved and anoth both

Added subscriber: @mont29

Added subscriber: @mont29

Threading issue, smoke code is not thread safe at all.

As long as different domain use different set of flow/obstacles objects (relevant 'group' options), everything seems OK, but if they share some (like in your file, where both monkeys are evaluated by both smoke domains), it breaks. Tried quick attempt to make this threadsafe, with not much luck, sounds rather involved.

Threading issue, smoke code is not thread safe at all. As long as different domain use different set of flow/obstacles objects (relevant 'group' options), everything seems OK, but if they share some (like in your file, where both monkeys are evaluated by both smoke domains), it breaks. Tried quick attempt to make this threadsafe, with not much luck, sounds rather involved.
Sergey Sharybin self-assigned this 2015-07-02 08:42:42 +02:00

This issue was referenced by 9cc75bc524

This issue was referenced by 9cc75bc524bfc80ed992fc97070b4d70011a896a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44945
No description provided.