Fix T44945: Blender crashes when using multiple domains and multiple flow objects with subframes

This is more like a workaround to prevent obvious cases fail, but in theory
if some other area will start updating object for subframes blender will
crash again.

Perhaps proper way to solve this will be to copy objects for subframe updates.